--- a/global.css
+++ b/global.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Trebuchet MS' sans-serif;
 }
 body {
     display: flex;
@@ -11,7 +12,6 @@ body {
 }
 .container {
     width: 100px;
-    background-color: #59007B  ;
 }
 @media screen and (min-width:576px) {
     .container {
