--- a/mura/style.css
+++ b/mura/style.css
@@ -1,22 +1,76 @@
+.container {
+    display: flex;
+    flex-direction: column;
+}
 .first {
     background-color: rgb(0, 0, 0);
     display: flex;
     padding: 50px;
     width: 100%;
-    height: 1000px;
+    height: 100%;
     justify-content: space-around;
     align-items: center;
 }
-img {
-    width: 100%;
-    height: 40%;
-    box-shadow: 0px 0px 10px 20px rgb(130, 6, 6);
+.aa > img {
+    width: 80%;
+    border-radius: 100%;
+    box-shadow: 5px 5px 10px 1px black, 10px 10px 5px 10px rgb(130, 6, 6), inset 5px 5px 10px 1px black;
 }
-.first:first-child {
+.red :last-child {
+    width: 40%;
+    height: 50px;
+}
+.container div:first-child {
     color: white;
 }
-.first :first-child :first-child {
-    font-size: 400%;
+.first > div:first-child {
+    font-size: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    width: 60%;
+    width: 50%;
+}
+ul {
+    font-size: 200%;
+    color: rgb(112, 168, 168);
+}
+.one {
+    background-color: rgb(130, 6, 6);
+    width: 100%;
+    height: 100px;
+}
+.aa {
+    display: flex;
+}
+.back {
+    display: flex;
+    width: 100px;
+    height: 100px;
+    background-color: blanchedalmond;
+    box-shadow: 0px 0px 20px 5px gray;
+    justify-content: center;
+    align-items: center;
+    border-radius: 3px;
+}
+.switch {
+    background-color: rgb(207, 184, 150);
+    width: 20px;
+    height: 50px;
+    box-shadow: 2px 5px 3px 3px gray;
+    border-radius: 2px;    
+}
+.second {
+    background-color: black;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    padding: 50px;
+}
+.neonred {
+    background-color: darkgray;
+    width: 100vh;
+    height: 8px;
+    border-radius: 2px;
+}
+.second :first-child {
+    display: flex;
+    flex-direction: column;
 }
