--- a/sumber/style.css
+++ b/sumber/style.css
@@ -3,41 +3,24 @@
     
     background-color: grey;
     width: 100%;
-    height: 1100px;
-    display: flex;
+    height: 800px;
+    /* display: flex; */
     justify-content: center;
-    
+    animation-duration: 10s;
+    animation-name: c;
+    animation-iteration-count: infinite;
+    transition: 10s;
 }
-@keyframes a {
-    from {background-color: grey;}
-    to {background-color: white;}
-  }
-/* @media  (min-width:50px){
-    .a {
-        width: 40px;
-        background-color: rgb(81, 225, 41);
-    }
-    }
-@media  (min-width:154px){
-.a {
-    width: 140px;
-    background-color: rgb(79, 120, 155);
-}
-}
-@media  (min-width:500px){
-    .a {
-        width: 480px;
-        background-color: aliceblue;
-    }
-    }
-    @media  (min-width:900px){
-        .a {
-            width: 880px;
-            background-color: rgb(13, 13, 13);
-        }
-} */
+@keyframes c {
+    0% {background-color: rgb(233, 22, 22);}
+    20% {background-color: rgb(238, 231, 15);}
+    40% {background-color: rgb(37, 223, 24);}
+    60% {background-color: rgb(30, 100, 221);}
+    80% {background-color: rgb(185, 22, 226);}
+    100% {background-color: rgb(233, 22, 22);}
+  } 
 body{
-    height: 1000px;
+    height: 2000px;
   
 }
 .a1{
@@ -45,34 +28,44 @@ body{
     left: 0px;
     top: 50px;
 }
-/* .a2{
-    font-size: 1000px;
+.a2{
+  color: #efe51d;
+    font-size: 80px;
     position: relative;
     margin: 5px;
-} */
+}
 .a3{
+  color: #09f443;
     font-size: 80px;
     position: relative;
     margin: 5px;
 }
 .a4{
+  color: #0a4ae0;
+    margin: 5px;
+    font-size: 80px;
+    position: relative;
+}
+.a5{
+  color: #d511e3;
     margin: 5px;
     font-size: 80px;
     position: relative;
 }
 #img{
+    box-shadow: 0 0 100px 10px rgb(27, 10, 500);
     position: absolute;
-    width: 110%;
-    height: 82%;
+    width: 60%;
+    height: 100%;
     border-radius: 50%;
 }
 .b{
     display: flex;
     justify-content: center;
     align-items: center;
-    /* position: absolute;
-    left: 330px;
-    top: 220px; */
+    position: absolute;
+    left: 500px;
+    top: 100px;
     width: 70%;
     height: 70%;
     border-radius: 50%;
@@ -91,13 +84,23 @@ body{
     
     background-color: grey;
     width: 5%;
-    height: 65%;
-    animation-name: a;
-    animation-duration: 6s;
+    height: 110%;
+    animation-name: e;
+    animation-duration: 5s;
     animation-timing-function: linear;
     animation-iteration-count: infinite;
     border-color: rgb(55, 64, 72);
     border-radius: 10px;
+    animation-iteration-count: infinite;
+    transition: 2s;
+  }
+  @keyframes e {
+    0% {background-color: rgb(233, 22, 22);  transform: rotate(0deg);}
+    20% {background-color: rgb(238, 231, 15);}
+    40% {background-color: rgb(37, 223, 24);}
+    60% {background-color: rgb(30, 100, 221);}
+    80% {background-color: rgb(185, 22, 226);}
+    100% {background-color: rgb(233, 22, 22); transform: rotate(360deg);}
   }
   @keyframes a{
     from { transform: rotate(0deg) }
@@ -105,11 +108,197 @@ body{
   }
   .c{
     position: relative;
-    left: -830px;
-    top: 450px;
+    left: 0px;
+    top: 50px;
+  }
+  .c1{
+    color: white;
+  }
+  .c2{
+    color: white;
   }
   h1{
     margin: 5px;
   }
+  .d1{
+    background-color: aliceblue;
+    width: 500px;
+    height: 25px;
+  }
+  .dropbtn {
+    background-color: #3498DB;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    animation-duration: 8s;
+    animation-name: d;
+    animation-iteration-count: infinite;
+    transition: 10s;
+  }
   
+  .dropbtn:hover, .dropbtn:focus {
+    background-color: #2980B9;
+  }
   
+  .dropdown {
+    position: relative;
+    top: 50px;
+    left: 20px;
+    display: inline-block;
+    animation-duration: 7s;
+    animation-name: b;
+    animation-iteration-count: infinite;
+    transition: 10s;
+  }
+  @keyframes d {
+    0% {background-color: rgb(233, 22, 22);}
+    20% {background-color: rgb(238, 231, 15);}
+    40% {background-color: rgb(37, 223, 24);}
+    60% {background-color: rgb(30, 100, 221);}
+    80% {background-color: rgb(185, 22, 226);}
+    100% {background-color: rgb(233, 22, 22);}
+  }
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: red;
+    min-width: 160px;
+    overflow: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    animation-duration: 10s;
+    animation-name: b;
+    animation-iteration-count: infinite;
+    transition: 10s;
+  }
+  @keyframes b {
+    0% {background-color: rgb(233, 22, 22);}
+    20% {background-color: rgb(238, 231, 15);}
+    40% {background-color: rgb(37, 223, 24);}
+    60% {background-color: rgb(30, 100, 221);}
+    80% {background-color: rgb(185, 22, 226);}
+    100% {background-color: rgb(233, 22, 22);}
+  }
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .dropdown a:hover {background-color: #ddd;}
+  
+  .show {display: block;}
+  .d{
+   
+    background-color: black;
+    position:absolute;
+    top: 800px;
+    height: 600px;
+    animation-duration: 8s;
+    animation-name: d;
+    animation-iteration-count: infinite;
+    transition: 10s;
+  }
+  @keyframes d {
+    0% {background-color: rgb(233, 22, 22);}
+    20% {background-color: rgb(238, 231, 15);}
+    40% {background-color: rgb(37, 223, 24);}
+    60% {background-color: rgb(30, 100, 221);}
+    80% {background-color: rgb(185, 22, 226);}
+    100% {background-color: rgb(233, 22, 22);}
+  }
+  .d1{
+    background-color: #3498DB;
+    width: 100%;
+    height: 5px;
+    animation-duration: 1s;
+    animation-name: d1;
+    animation-iteration-count: infinite;
+    transition: 10s;
+  }
+  @keyframes d1 {
+    0% {background-color: rgb(233, 22, 22);}
+    20% {background-color: rgb(238, 231, 15);}
+    40% {background-color: rgb(37, 223, 24);}
+    60% {background-color: rgb(30, 100, 221);}
+    80% {background-color: rgb(185, 22, 226);}
+    100% {background-color: rgb(233, 22, 22);}
+  }
+  .d2{
+    color: rgb(29, 161, 237);
+    position: relative;
+    left: 500px;
+    top: 100px;
+    font-size: 300%;
+  }
+  .d3{
+    position: relative;
+    left: 350px;
+    top: 150px;
+    color: #f40909;
+  }
+  .d4{
+    position: relative;
+    left: 505px;
+    top: 50px;
+    width: 300px;
+    height: 5px;
+    background-color: #09f443;
+    border-radius: 5px;
+    animation-duration: 2s;
+    animation-name: d4;
+    animation-iteration-count: infinite;
+    transition: 10s;
+  }
+  @keyframes d4 {
+    0% {background-color: rgb(233, 22, 22);}
+    20% {background-color: rgb(238, 231, 15);}
+    40% {background-color: rgb(37, 223, 24);}
+    60% {background-color: rgb(30, 100, 221);}
+    80% {background-color: rgb(185, 22, 226);}
+    100% {background-color: rgb(233, 22, 22);}
+  }
+  #img2{
+    position: relative;
+    left: 580px;
+    top: 200px;
+   width: 150px;
+  }
+  #img3{
+    position: relative;
+    left: 70px;
+    top: 205px;
+    width: 250px;
+  }
+  #img4{
+    position: relative;
+    left: 510px;
+    top: 205px;
+    width: 110px;
+  }
+  .d5{
+    color: rgb(232, 192, 74);
+    position: relative;
+    left: 420px;
+    top: 65px;
+}
+.d6{
+  color: rgb(224, 110, 57);
+  position: relative;
+  left: 720px;
+  top: 25px;
+}
+.d7{
+  color: rgb(56, 100, 232);
+  position: relative;
+  left: 1040px;
+  top: -20px;
+}
+.d8{
+  position: relative;
+  left: 255px;
+  top: 50px;
+}
