--- a/Chingun/style.css
+++ b/Chingun/style.css
@@ -1,23 +1,21 @@
 .container {
-display: flex;
-align-items: center;
-height: 100vh;
+    margin: 100px 150px 0 150px;
 }
 .chingun-profile {
     display: flex;
     justify-content: space-around;
-    margin: 0 100px 0 100px;
+    gap: 10px;
 }
 .chingun-profile > div:nth-child(2) {
     border: 5px solid black;
     border-bottom-left-radius: 50%;
     box-shadow: 20px -20px 0px 0px black;
-    width: 25vw;
+    width: 22vw;
     height: 50vh;
 }
 img {
     border-bottom-left-radius: 50%;
-    width: 24vw;
+    width: 21vw;
     height: 49.1vh;
 }
 button {
@@ -60,4 +58,40 @@ button {
 .text > div:nth-child(2) {
     font-size: 1.5em;
     color: grey;
+}
+.got-skills {
+    margin: 20px 0 0 0;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    justify-content: center;
+    align-items: center;
+}
+.got-skills > div:nth-child(1) {
+    font-size: 2.5em;
+    font-weight: bold;
+}
+.got-skills > div:nth-child(2) {
+    font-size: 1.1em;
+}
+.got-skills > div:nth-child(3) {
+    margin-top: 50px;
+    display: flex;
+    gap: 100px;
+}
+.ci {
+    width: 250px;
+    height: 250px;
+    border-radius: 50%;
+    border: 10px solid black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.circle-1 > div:nth-child(1) {
+    width: 250px;
+    height: 125px;
+    background-color: green;
+    border-top-left-radius: 50%;
+    border-top-right-radius: 50%;
 }
