--- a/sumber/style.css
+++ b/sumber/style.css
@@ -85,7 +85,7 @@ body{
     background-color: grey;
     width: 5%;
     height: 110%;
-    animation-name: e;
+    animation-name: small;
     animation-duration: 5s;
     animation-timing-function: linear;
     animation-iteration-count: infinite;
@@ -94,7 +94,7 @@ body{
     animation-iteration-count: infinite;
     transition: 2s;
   }
-  @keyframes e {
+  @keyframes small{
     0% {background-color: rgb(233, 22, 22);  transform: rotate(0deg);}
     20% {background-color: rgb(238, 231, 15);}
     40% {background-color: rgb(37, 223, 24);}
@@ -197,7 +197,7 @@ body{
     position:absolute;
     top: 800px;
     height: 600px;
-    animation-duration: 8s;
+    animation-duration: 10.5s;
     animation-name: d;
     animation-iteration-count: infinite;
     transition: 10s;
@@ -298,7 +298,103 @@ body{
   top: -20px;
 }
 .d8{
+  color: white;
   position: relative;
   left: 255px;
-  top: 50px;
+  top: 100px;
+}
+.d9{
+  color: white;
+  position: relative;
+  left: 595px;
+  top: 72px;
+}
+.d10{
+  color: white;
+  position: relative;
+  left: 930px;
+  top: 40px;
+}
+.e{
+ 
+  position:absolute;
+  top: 1400px;
+  width: 64.5%;
+  height: 1200px;
+  animation-duration: 11s;
+  animation-name: m;
+  animation-iteration-count: infinite;
+
+}
+@keyframes m {
+  0% {background-color: rgb(233, 22, 22);}
+  20% {background-color: rgb(238, 231, 15);}
+  40% {background-color: rgb(37, 223, 24);}
+  60% {background-color: rgb(30, 100, 221);}
+  80% {background-color: rgb(185, 22, 226);}
+  100% {background-color: rgb(233, 22, 22);}
+}
+.e1{
+  background-color: #3498DB;
+  width: 100%;
+  height: 5px;
+  animation-duration: 1s;
+  animation-name:d1;
+  animation-iteration-count: infinite;
+  transition: 10s;
+}
+#img5{
+  position: relative;
+  left: 200px;
+  top: 150px;
+width: 500px;
+}
+#img6{
+  position: relative;
+  left: 200px;
+  top: 750px;
+  width: 600px;
+}
+.e2{
+  color: #0a4ae0;
+  position: absolute;
+  left: 400px;
+  font-size: 60px;
+}
+.e3{position: relative;
+  left: 750px;
+  top: 250px;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  animation-duration: 3s;
+  animation-name: e;
+  animation-iteration-count: infinite;
+  width: 400px;
+}
+.e4{
+  color: white;
+}
+
+.e5{position: relative;
+  left: 250px;
+  top: 850px;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  animation-duration: 3s;
+  animation-name: e;
+  animation-iteration-count: infinite;
+  width: 400px;
+}
+.e6{
+  color: white;
+}
+@keyframes e {
+  0% {background-color: rgb(233, 22, 22);}
+  20% {background-color: rgb(238, 231, 15);}
+  40% {background-color: rgb(37, 223, 24);}
+  60% {background-color: rgb(30, 100, 221);}
+  80% {background-color: rgb(185, 22, 226);}
+  100% {background-color: rgb(233, 22, 22);}
 }
