--- a/Chingun/style.css
+++ b/Chingun/style.css
@@ -75,23 +75,60 @@ button {
     font-size: 1.1em;
 }
 .got-skills > div:nth-child(3) {
+    width: 100%;
     margin-top: 50px;
     display: flex;
     gap: 100px;
 }
-.ci {
-    width: 250px;
-    height: 250px;
-    border-radius: 50%;
-    border: 10px solid black;
+.flex-wrapper {
     display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.circle-1 > div:nth-child(1) {
-    width: 250px;
-    height: 125px;
-    background-color: green;
-    border-top-left-radius: 50%;
-    border-top-right-radius: 50%;
-}
+    flex-flow: row nowrap;
+  }
+  
+  .single-chart {
+    width: 33%;
+    justify-content: space-around ;
+  }
+  
+  .circular-chart {
+    display: block;
+    margin: 10px auto;
+    max-width: 80%;
+    max-height: 250px;
+  }
+  
+  .circle-bg {
+    fill: none;
+    stroke: #eee;
+    stroke-width: 3.8;
+  }
+  
+  .circle {
+    fill: none;
+    stroke-width: 2.8;
+    stroke-linecap: round;
+    animation: progress 1s ease-out forwards;
+  }
+  
+  @keyframes progress {
+    0% {
+      stroke-dasharray: 0 100;
+    }
+  }
+  
+  .circular-chart.orange .circle {
+    stroke: #ff9f00;
+  }
+  
+  .circular-chart.green .circle {
+    stroke: #4CC790;
+  }
+  .circular-chart.blue .circle {
+    stroke: #3c9ee5;
+  }
+  .percentage {
+    fill: #666;
+    font-family: sans-serif;
+    font-size: 0.3em;
+    text-anchor: middle;
+  }
