--- a/global.css
+++ b/global.css
@@ -6,11 +6,10 @@
 }
 body {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+    flex-direction: column ;
+    height: 350vh ;
 }
-
+/* 
 @media screen and (min-width:576px) {
     .a {
         width: 540px;
@@ -35,7 +34,231 @@ body {
     .a {
         width: 1320px;
     }
+} */
+.container {
+    height: 35% ;
+    width: 100% ;
+    background-color: cyan ;
 }
-
-
-
+.head {
+    height: 30%  ;
+    width: 100% ;
+    background-color: purple ;
+}
+.middle {
+    height: 25% ;
+    width: 100% ;
+    background-color: wheat ;
+}
+.end {
+    height: 40% ;
+    width: 100% ;
+    background-color: pink ;
+    display: flex ;
+    flex-direction: column ;
+    align-items: center ;
+}
+.title {
+    margin-top: 4% ;
+    color: white ; 
+    font-size: 50px ;
+}
+.text {
+    margin: 3% ;
+    color: white ;
+    font-size: 20px ;
+}
+.leader {
+    width: 40% ;
+    height: 20% ;
+}
+.frame4 {
+    border: solid red ;
+    border-radius: 75px ;
+    width: 150px ;
+    height: 150px ;
+    margin-top: 5% ;
+    margin-left: 3% ;
+}
+.comment12 {
+    font-size: 30px ;
+    color: white ;
+    margin-left: 30% ;
+    margin-top: -15% ;
+}
+.comment13 {
+    font-size: 30px ;
+    color: white ;
+    margin-left: 30% ;
+}
+.comment14 {
+    font-size: 30px ;
+    color: white ;
+    margin-left: 30% ;
+}
+.name4 {
+    color: white ;
+    margin-left: 30% ;
+    margin-top: 5% ;
+}
+.info4 {
+    color: orange ;
+    margin-left: 30% ;
+    margin-top: 1% ;
+}
+.boxes {
+    display: grid ;
+    width: 80%;
+    height: 40% ;
+    grid-template-columns: 1fr 1fr ;
+    grid-template-rows: 1fr 1fr ;
+}
+.frame {
+    border: solid red ;
+    border-radius: 75px ;
+    width: 150px ;
+    height: 150px ;
+    margin-top: 5% ;
+    margin-left: 3% ;
+}
+.comment {
+    font-size: 30px ;
+    color: white ;
+    margin-left: 30% ;
+    margin-top: -15% ;
+}
+.comment1 {
+    font-size: 30px ;
+    color: white ;
+    margin-left: 30% ;
+}
+.comment2 {
+    font-size: 30px ;
+    color: white ;
+    margin-left: 30% ;
+}
+.name {
+    color: white ;
+    margin-left: 30% ;
+    margin-top: 5% ;
+}
+.info {
+    color: orange ;
+    margin-left: 30% ;
+    margin-top: 1% ;
+}
+.frame1 {
+    border: solid red ;
+    border-radius: 75px ;
+    width: 150px ;
+    height: 150px ;
+    margin-top: 5% ;
+    margin-left: 3% ;
+}
+.comment3 {
+    font-size: 30px ;
+    color: white ;
+    margin-left: 30% ;
+    margin-top: -15% ;
+}
+.comment4 {
+    font-size: 30px ;
+    color: white ;
+    margin-left: 30% ;
+}
+.comment5 {
+    font-size: 30px ;
+    color: white ;
+    margin-left: 30% ;
+}
+.name1 {
+    color: white ;
+    margin-left: 30% ;
+    margin-top: 5% ;
+}
+.info1 {
+    color: orange ;
+    margin-left: 30% ;
+    margin-top: 1% ;
+}
+.frame2 {
+    border: solid red ;
+    border-radius: 75px ;
+    width: 150px ;
+    height: 150px ;
+    margin-top: 5% ;
+    margin-left: 3% ;
+}
+.comment6 {
+    font-size: 30px ;
+    color: white ;
+    margin-left: 30% ;
+    margin-top: -15% ;
+}
+.comment7 {
+    font-size: 30px ;
+    color: white ;
+    margin-left: 30% ;
+}
+.comment8 {
+    font-size: 30px ;
+    color: white ;
+    margin-left: 30% ;
+}
+.name2 {
+    color: white ;
+    margin-left: 30% ;
+    margin-top: 5% ;
+}
+.info2 {
+    color: orange ;
+    margin-left: 30% ;
+    margin-top: 1% ;
+}
+.frame3 {
+    border: solid red ;
+    border-radius: 75px ;
+    width: 150px ;
+    height: 150px ;
+    margin-top: 5% ;
+    margin-left: 3% ;
+}
+.comment9 {
+    font-size: 30px ;
+    color: white ;
+    margin-left: 30% ;
+    margin-top: -15% ;
+}
+.comment10 {
+    font-size: 30px ;
+    color: white ;
+    margin-left: 30% ;
+}
+.comment11 {
+    font-size: 30px ;
+    color: white ;
+    margin-left: 30% ;
+}
+.name3 {
+    color: white ;
+    margin-left: 30% ;
+    margin-top: 5% ;
+}
+.info3 {
+    color: orange ;
+    margin-left: 30% ;
+    margin-top: 1% ;
+}
+.bottom {
+    display: flex ;
+    background-color: blue ;
+    width: 100% ;
+    height: 10% ;
+    margin-top: 10%;
+    justify-content: space-around ;
+}
+.apps {
+    color: white ;
+    font-size: 30px ;
+    margin-top: 3% ;
+}
