--- a/mura/style.css
+++ b/mura/style.css
@@ -8,7 +8,7 @@
     background-size: 100% 100vh;
     display: flex;
     padding: 50px;
-    width: 100%;
+    width: 100vw;
     height: 100vh;
     justify-content: space-around;
     align-items: center;
