--- a/global.css
+++ b/global.css
@@ -6,9 +6,9 @@
 }
 body {
     display: flex;
-
+    flex-direction: column ;
+    align-items: center;
     justify-content: center;
-
 }
 
 @media screen and (min-width:576px) {
