--- a/Chingun/style.css
+++ b/Chingun/style.css
@@ -127,6 +127,9 @@ button {
     fill: none;
     stroke-width: 2.8;
     stroke-linecap: round;
+    /* animation: progress 1s ease-out forwards; */
+}
+.got-skills:hover * .circle {
     animation: progress 1s ease-out forwards;
 }
 
@@ -221,6 +224,7 @@ button {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-evenly;
 }
 .contact-form>div:nth-child(1) {
     width: 100%;
@@ -233,13 +237,73 @@ button {
     font-weight: bold;
 }
 .contact-form-name-phone {
+    width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 .contact-form-name-phone>input {
     width: 30%;
-    height: 100%;
+    height: 60px;
+    border-radius: 10px;
+    border: 1px solid white;
+    font-size: 1.5em;
+    padding: 10px;
+}
+.contact-form>input {
+    border-radius: 10px;
+    height: 60px;
+    border: 1px solid white;
+    font-size: 1.5em;
+    padding: 10px;
 }
 .contact-form>input:nth-child(3) {
-    width: 80%;
+    margin-right: 10%;
+    width: 70%;
+}
+.contact-form>input:nth-child(4) {
+    margin-right: 40%;
+    width:40% ;
+}
+.contact-form>input:nth-child(5) {
+    margin-right: 40%;
+    width: 40%;
+}
+.contact-form>button {
+    width: 40%;
+    height: 60px;
+    background-color: #F37A7A;
+    border: 1px solid #F37A7A;
+    border-radius: 10px;
+    color: white;
+    font-weight: 200;
+}
+.contact-form>input:nth-child(3) {
+    width: 70%;
+}
+.footer {
+    margin-top: 30px;
+    width: 100%;
+    height: 30vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+}
+.footer>div:nth-child(1) {
+    font-size: 3em;
+    color: #4A6CFA;
+    font-weight: bold;
+}
+.footer>div:nth-child(3) {
+    margin-top: 50px;
+    color: #4A6CFA;
+    font-size: 1em;
+}
+.footer>button {
+    border: 1px solid #4A6CFA;
+    background-color: #4A6CFA;
+    border-radius: 20px;
+    width: 10%;
+    color: white;
+    font-size: 0.8em;
 }
