--- a/badrakh/home.css
+++ b/badrakh/home.css
@@ -14,10 +14,33 @@ body {
 .container {
     height: 35% ;
     width: 100% ;
-    background-color: cyan ;
+    background-color: rgb(201, 228, 245);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.introduction > div > img {
+    border-radius: 50%;
+    width: 30%;
+}
+.introduction {
+    display: flex;
+    flex-direction: row;
+    padding: 50px;
+}
+.heading {
+    color: rgb(7, 36, 78);
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+.heading :first-child {
+    font-size: 40px;
+}
+.blue {
+    background-color: rgb(201, 228, 245);
 }
 .head {
-    height: 40%  ;
+    height: 20%  ;
     width: 100%;
     background-color: #59007B ;
 }
