--- a/badrakh/home.css
+++ b/badrakh/home.css
@@ -33,7 +33,7 @@
     background-color: rgb(201, 228, 245);
 }
 .head {
-    height: 20%  ;
+    height: 50vh;
     width: 100%;
     background-color: #59007B ;
 }
