--- a/global.css
+++ b/global.css
@@ -7,7 +7,6 @@
 body {
     display: flex;
     flex-direction: column ;
-
     align-items: center;
     justify-content: center;
 
@@ -35,7 +34,7 @@ body {
 }
 @media screen and (min-width: 1400px) {
     .container {
-        width: 1320px;
+        width: 100%;
     }
 }
 
