--- a/badrakh/home.css
+++ b/badrakh/home.css
@@ -18,10 +18,35 @@
     width: 30%;
 }
 .introduction {
+    width: 70%;
     display: flex;
-    flex-direction: row;
     padding: 50px;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 50px;
 }
+.introduction>div {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 25%;
+}
+/* .Chingun {
+    width: 30%;
+}
+.Undram {
+    width: 30%;
+}
+.Badrah {
+    width: 30%;
+}
+.Sumber {
+    width: 30%;
+}
+.Enhtuvshin {
+    width: 30%;
+} */
 .heading {
     color: rgb(7, 36, 78);
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
