--- a/badrakh/home.css
+++ b/badrakh/home.css
@@ -366,6 +366,7 @@
 .app1 {
     cursor: pointer;
     color: white ;
+    font-family: sans-serif;
 }
 .app1:hover {
     color: cyan;
@@ -373,6 +374,7 @@
 .app2 {
     cursor: pointer;
     color: white ;
+    font-family: sans-serif;
 }
 .app2:hover {
     color: cyan;
@@ -380,6 +382,7 @@
 .app3 {
     cursor: pointer;
     color: white ;
+    font-family: sans-serif;
 }
 .app3:hover {
     color: cyan;
@@ -387,6 +390,7 @@
 .app4 {
     cursor: pointer;
     color: white ;
+    font-family: sans-serif;
 }
 .app4:hover {
     color: cyan;
@@ -394,6 +398,7 @@
 .app5 {
     cursor: pointer;
     color: white ;
+    font-family: sans-serif;
 }
 .app5:hover {
     color: cyan;
@@ -401,6 +406,7 @@
 .app6 {
     cursor: pointer;
     color: white ;
+    font-family: sans-serif;
 }
 .app6:hover {
     color: cyan;
@@ -408,43 +414,11 @@
 .app7 {
     cursor: pointer;
     color: white ;
+    font-family: sans-serif;
 }
 .app7:hover {
     color: cyan;
 }
-.apps {
-    color: white ;
-    font-size: 30px ;
-    margin-top: 2% ;
+a {
+    text-decoration: none;
 }
-.container {
-    display: flex ;
-    align-items: center ;
-    flex-direction: column ;
-}
-.title1 {
-    font-size: 50px ;
-    color: blue ;
-    margin-top: 2% ;
-}
-.text1 {
-    font-size: 20px ;
-    margin-top: 1% ;
-}
-.line {
-    background-color: grey ;
-    border: solid grey ;
-    width: 100px ;
-    height: 5px ;
-    border-radius: 5px ;
-}
-<<<<<<< HEAD
-=======
-.words {
-    text-decoration: underline ;
-    color: white ;
-}
-.end {
-    height: 110vh ;
-}
->>>>>>> 895e6ddea90970283806b507cad50f73ce15f05a
