--- a/sumber/style.css
+++ b/sumber/style.css
@@ -421,7 +421,7 @@ width: 500px;
   /* position:absolute;
   width: 100%;
   display: flex;
-  justify-content: center; */
+  justify-content: center;
 }
 .vehiecle{
   background-color: #0a4ae0;
@@ -429,7 +429,7 @@ width: 500px;
   top: 2400px;
   width: 64.5%;
   height: 600px;
-} */
+} */ */
 .c3{
   position: relative;
   top: 50px;
