--- a/mura/style.css
+++ b/mura/style.css
@@ -152,7 +152,8 @@ ul {
     width: 70%;
     height: 100%;
     display: flex;
-     padding: 50px;
+    flex-direction: column;
+    padding: 50px;
 }
 .skills {
     display: flex;
@@ -173,3 +174,4 @@ ul {
     width: 45%;
     height: 45%;
 }
+.thir
