--- a/mura/style.css
+++ b/mura/style.css
@@ -155,6 +155,9 @@ ul {
     flex-direction: column;
     padding: 50px;
 }
+.logo > img {
+    width: 50%;
+}
 .skills {
     display: flex;
     justify-content: center;
@@ -174,4 +177,3 @@ ul {
     width: 45%;
     height: 45%;
 }
-.thir
