--- a/global.css
+++ b/global.css
@@ -7,6 +7,7 @@
 body {
     display: flex;
     justify-content: center;
+    flex-direction: column;
 }
 @media screen and (min-width:576px) {
     .container {
