--- a/Enkhtuvshin/style.css
+++ b/Enkhtuvshin/style.css
@@ -4,7 +4,14 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: gray;
+  background-color: #fff;
+  border: 1px solid gray;
+}
+.pageSecond {
+  width: 100%;
+  height: 100vh;
+  border: 1px solid gray;
+  background-color: #fff;
 }
 .checkbox {
   display: flex;
@@ -14,9 +21,9 @@
   z-index: 1;
   opacity: 0.1;
 }
- .checkbox:checked ~ .pageSecond {
-    opacity: 1;
-} 
+.checkbox:checked ~ .pageSecond {
+  opacity: 1;
+}
 .bck {
   display: flex;
   flex-direction: row;
@@ -99,12 +106,6 @@
   opacity: 0;
   cursor: pointer;
 }
-.pageSecond {
-  height: 100vh;
-  width: 100%;
-  background-color: white;
-  opacity: 1;
-}
 .buttonSec {
   display: flex;
   width: 50px;
@@ -140,6 +141,7 @@
   justify-content: center;
   font-size: 50px;
   color: black;
+  font-family: sans-serif;
 }
 .skill-ques {
   display: flex;
@@ -153,7 +155,7 @@
   width: 100px;
   height: 4px;
   position: absolute;
-  top: 990px;
+  top: 1100px;
   border-radius: 5px;
   background-color: gray;
 }
@@ -316,7 +318,8 @@
   background-color: #fff;
   border-radius: 50%;
   font-size: 50px;
-}.sector3 {
+}
+.sector3 {
   overflow: hidden;
 }
 .sector3 > div {
@@ -330,16 +333,13 @@
 }
 .sector3:nth-of-type(2) > div {
   transform-origin: 0% 100%;
-
 }
 .sector3:nth-of-type(3) > div {
-  transform-origin: 0% 0%;
-  transform: rotateY(0deg);
-
+  transform-origin: 100% 0%;
+  transform: rotate(-40deg);
 }
 .sector3:nth-of-type(4) > div {
-  transform-origin: 100% 0%;
-
+  transform-origin: 0% 0%;
 }
 .center3 {
   position: absolute;
@@ -390,4 +390,115 @@
 }
 .narrative {
   font-family: sans-serif;
+}
+.pageThird {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: aliceblue;
+}
+.title {
+  display: flex;
+  justify-content: center;
+  font-size: 40px;
+  color: #f37a7a;
+  font-family: sans-serif;
+}
+.project {
+  color: #818080;
+  font-size: 30px;
+  font-family: sans-serif;
+  margin: 64px 0px;
+}
+.squares {
+  display: flex;
+  flex-direction: row;
+  gap: 100px;
+  align-items: center;
+}
+.project1 {
+  display: flex;
+  width: 400px;
+  height: 500px;
+  border: 5px solid green;
+  flex-direction: column;
+}
+.project2 {
+  display: flex;
+  width: 400px;
+  height: 500px;
+  border: 5px solid red;
+  flex-direction: column;
+}
+.project3 {
+  display: flex;
+  width: 400px;
+  height: 500px;
+  border: 5px solid white;
+  flex-direction: column;
+}
+.photo {
+  display: flex;
+  justify-content: flex-start;
+  width: 100%;
+  height: 60%;
+}
+.text {
+  display: flex;
+  color: #818080;
+  font-family: sans-serif;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  justify-content: flex-end;
+}
+.pageFourth {
+  display: flex;
+  width: 100%;
+  height: 50vh;
+  background-color: rgb(72, 72, 212);
+  display: grid ;
+  grid-template-columns: 1fr 1fr ;
+  grid-template-rows: 1fr ;
+}
+.box {
+  border: 1px solid red ;
+  display: flex;
+  flex-direction: column;
+  column-gap: 30px;
+}
+.box p {
+  display: flex;
+  align-items: flex-end;
+  color: #fff;
+  justify-content: center;
+}
+.box1 {
+
+}
+.markers {
+  display: flex;
+  width: 200px;
+  height: 200px;
+  flex-direction: row;
+  gap: 30px;
+  cursor: pointer;
+  position: relative;
+  left: 200px;
+}
+.links  p {
+  display: flex;
+  flex-direction: column;
+  color: #fff;
+  font-family: sans-serif;
+  column-gap: 10px;
+}
+.contact-information  p {
+  display: flex;
+  flex-direction: column;
+  color: #fff;
+  font-family: sans-serif;  
 }
